--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,37 @@
 /* Custom CSS */
+body {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 90%;
+}
+
+.code-block{
+	margin-top: 10px;
+	margin-bottom: 10px;
+	background-color: #333; 
+	color: #f5f5f5; 
+	border: 1px #333; 
+	border-radius: 5px; 
+	padding: 10px
+}
+
+.file-block {
+	background-color: #333;
+	color: #f5f5f5;
+	border: 1px #333;
+	border-radius: 5px;
+	padding: 2px 5px 2px 5px;
+	font-style: italic;
+}
+
+.block-divider {
+	margin: 15px 10px 5px 10px;
+	border: 1px rgba(238,238,238,0.6) solid ;
+}
+
+.page-content {
+	padding-top: 0px;
+}
+
 .bash-root-prompt {
 	font-weight: 900;
 	color: #f5f5f5;
