Updated stuff and things

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
 
       <div class="trigger">
         <a class="page-link" href="/getting-started/">Getting Started</a>
-        <a class="page-link" href="/documentation">Documentation</a>
-        <a class="page-link" href="/contribute/">Contribute Today!</a>
+        <a class="page-link" href="/documentation/">Documentation</a>
+        <a class="page-link" href="/contribute/">How To Contribute</a>
       </div>
     </nav>
 
