Updated site with new install instructions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,10 @@
 
       <div class="footer-col footer-col-3">
         <ul class="contact-list">
-          <li><a href="">Questions / Feedback</a></li>
-          <li><a href="">Bugs / Issues</a></li>
-          <li><a href="">Signature DB Feed</a></li>
-          <li><a href="">Contact Us</a></li>
+          <li><a href="/contact/">Questions / Feedback</a></li>
+          <li><a href="https://github.com/jgrancell/malscan/issues" target="blank">Bugs / Issues</a></li>
+          <li><a href="/rss/">Signature DB Feed</a></li>
+          <li><a href="/contact/">Contact Us</a></li>
         </ul>
       </div>
 
